# CppInventoryManager

./: CMakeLists.txt
include/: database_manager.hpp  inventory_manager.hpp  item.hpp
src/: database_manager.cpp  inventory_manager.cpp  item.cpp  main.cpp
